# hungarian-optimizer

./: CMakeLists.txt  README.md  TestHungarian.cpp  build.sh  main.cpp
inc/: hungarian_optimizer.h
python/: environment.yml  test_linear_sum_assignment.py
